#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "common_lib_zxwqxtu"
version = "0.0.1"
authors = [
  { name="zxwqxtu", email="zxwqxtu@outlook.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zxwqxtu/common_lib_py"
Issues = "https://github.com/zxwqxtu/common_lib_py/issues"

